# LauncherStudio

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build_and_publish.sh  desktopfilemanager_0.1.0-1_amd64.deb  fr.arnaudmichel.launcherstudio.metainfo.xml  launcher-studio_0.1.0-1_amd64.deb  publish_to_ghpages.sh
.github/: FUNDING.yml
assets/styles/: styles.css
data/: launcher_studio.desktop  launcher_studio.metainfo.xml
po/: de.po  en.po  es.po  fr.po  launcher_studio.pot
src/: app.rs  main.rs
src/domain/: desktop_entry.rs
src/services/: desktop_reader.rs  desktop_writer.rs  mod.rs
src/ui/: helpers.rs  mod.rs
src/ui/components/: menu_bar.rs  mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
src/ui/editor/: entry_form.rs  mod.rs
src/ui/windows/: main_window.rs
