[package]
name = "desktop_app"
version = "0.1.0"
edition = "2024"
description = "A GTK4 desktop application for creating and managing .desktop files on Linux."
license = "MIT"
authors = ["Arnaud Michel contact@arnaudmichel.fr"]

[dependencies]
anyhow = "1.0.98"

# GTK4 and Libadwaita for GNOME apps
gtk4 = "0.10.0"
# GLib/GIO
gio = "0.21.1"
glib = "0.21.1"
# Utilities for locating XDG directories
directories = "6.0.0"
open = "5.3.2"

[package.metadata.deb]
copyright = "© 2025 Arnaud Michel"
