[package]
name = "launcher_studio"
version = "0.1.0"
edition = "2025"
description = "Launcher Studio: A GTK4 app for creating and managing .desktop files on Linux."
license = "MIT"
authors = ["Arnaud Michel contact@arnaudmichel.fr"]

[dependencies]
anyhow = "1.0.98"
gtk4 = "0.10.0"
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_6"] }
gio = "0.21.1"
directories = "6.0.0"
open = "5.3.2"

[package.metadata.deb]
copyright = "© 2025 Arnaud Michel"